--- a/NatGenetics2015_reanalysis/NatGenetics2015_VIF/compare_VIF_vs_published_insertions/compare_VIF_to_published_NatGenet2015.Rmd
+++ b/NatGenetics2015_reanalysis/NatGenetics2015_VIF/compare_VIF_vs_published_insertions/compare_VIF_to_published_NatGenet2015.Rmd
@@ -18,20 +18,48 @@ BINSIZE = 1000
 
 ```
 
+# published insertions
+
 ```{r}
 
+## Just HIVID here
+
 published_insertions = read.table("../../NatGenetics2015_reanalysis_published_data/data/TableS5.w_Hg38.tsv", header=T, sep="\t", stringsAsFactors = F)  %>%
-  select(sample_id, hg38_Chrom, hg38_Coord, pub_total = total, found_by_WGS ) %>% filter(! is.na(hg38_Coord))
+  select(sample_id, hg38_Chrom, hg38_Coord, pub_total = total, found_by_WGS )
 
 published_insertions = published_insertions %>% mutate(sample_id = toupper(sample_id)) %>% 
   mutate(sample_id = ifelse(sample_id == "CASKI", "CASKID", sample_id))
 
 nrow(published_insertions)
 
+# in the abstract it says 3667 and in the paper 3666.
+# there are actually 
+
 ```
 
 
 ```{r}
+# num samples
+published_insertions %>% select(sample_id) %>% unique() %>% nrow()
+
+# 103/135 hivid samples have insertions, as indicated in the paper
+
+```
+
+```{r}
+
+# There are three insertions that we couldn't get the hg19->hg38 coordinate translation for using liftover
+published_insertions %>% filter(is.na(hg38_Coord))
+
+published_insertions = published_insertions %>% filter(! is.na(hg38_Coord))
+
+```
+
+
+
+```{r}
+
+# how may insertion loci - taking the highest supported insertion within the BINSIZE?
 
 published_insertions = published_insertions %>% mutate(bin = round(hg38_Coord / BINSIZE)) %>% 
   group_by(sample_id, hg38_Chrom, bin) %>% arrange(desc(pub_total)) %>% filter(row_number() == 1) %>% ungroup() %>% 
@@ -39,29 +67,86 @@ published_insertions = published_insertions %>% mutate(bin = round(hg38_Coord / 
 
 nrow(published_insertions)
 
-````
+```
 
 
+```{r}
+# What's the distribution of read support across loci?
 
+median(published_insertions$pub_total)
+
+published_insertions %>% group_by(pub_total) %>% tally() %>% ggplot(aes(x=pub_total, y=n)) + geom_col() + xlim(0,25)
+
+# median of 5 reads for support at locus
+
+```
 
 
 ```{r}
 
-prelim_insertions = read.table("../insertions.tsv", header=T, sep="\t", stringsAsFactors = F) %>% filter(sample_type == "hivid")
+# insertions per sample
 
-prelim_insertions$sample_id = sapply(prelim_insertions$sample_label, function(x) { str_split(x, "-")[[1]][4]})
+published_insertions %>% group_by(sample_id) %>% tally() %>% 
+  ggplot(aes(x=reorder(sample_id, -1*n), n)) + geom_col() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+  ggtitle("Published Insertions/Sample")
 
-nrow(prelim_insertions)
+
+```
+
+
+# VIF insertions
+
+```{r}
+
+vif_insertions = read.table("../insertions.tsv", header=T, sep="\t", stringsAsFactors = F) %>% filter(sample_type == "hivid")
+
+vif_insertions$sample_id = vif_insertions$sample_label_short
+
+nrow(vif_insertions)
+
+```
+
+
+```{r}
+# identify the samples we were able to process.
+
+vif_processed = read.table(gzfile("../data/NatGen2015.star_align_stats.tsv.gz"), header=T, sep="\t", stringsAsFactors = F)
+
+sample_info = read.table("../NatGen2015.samples_info.tsv", header=T, sep="\t", stringsAsFactors = F) %>% 
+  filter(sample_type == "hivid") %>%
+  mutate(sample_id = sample_label_short)
+
+sample_info = sample_info %>% mutate(vif_processed = TRUE)
+
+sample_info = full_join(sample_info, published_insertions %>% select(sample_id) %>% unique(), by='sample_id' )
+
+
+sample_info = sample_info %>% mutate(vif_processed = ifelse(is.na(vif_processed), FALSE, vif_processed))
+    
+sample_info %>% arrange(vif_processed)                         
+                                     
+# we don't have S12 hivid data!  Can't find it on SRA
 
 ```
 
 ```{r}
 
-prelim_insertions = prelim_insertions %>% mutate(bin = round(human_coord / BINSIZE) ) %>% 
+vif_hivid_samples_processed = sample_info %>% filter(vif_processed) %>% pull(sample_id)
+
+
+```
+
+
+```{r}
+# convert to insertion loci
+vif_insertions = vif_insertions %>% 
+  filter(is_primary == 'True') %>%  # restrict to single virus breakends
+  mutate(bin = round(human_coord / BINSIZE) ) %>% 
   group_by(sample_id, humanchr, bin) %>% arrange(desc(total)) %>% filter(row_number() == 1) %>% ungroup() %>% 
   select(-bin)
 
-nrow(prelim_insertions)
+nrow(vif_insertions)
 
 
 ```
@@ -70,8 +155,85 @@ nrow(prelim_insertions)
 
 ```{r}
 
-sample_ids = intersect(published_insertions %>% select(sample_id) %>% unique() %>% pull(sample_id),
-                       prelim_insertions %>% select(sample_id) %>% unique() %>% pull(sample_id))
+# vif insertions per sample
+
+
+vif_insertions %>% group_by(sample_id) %>% tally() %>% 
+  ggplot(aes(x=reorder(sample_id, -1*n), n)) + geom_col() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + 
+  ggtitle("VIF Insertions/Sample")
+
+
+```
+
+
+
+
+
+
+```{r}
+# merge published and VIF counts into single table
+
+combined_insertion_counts = full_join(vif_insertions %>% group_by(sample_id) %>% tally(name='vif_insertion_count'),
+          published_insertions %>% 
+            filter(sample_id %in% vif_hivid_samples_processed) %>% 
+            group_by(sample_id) %>% tally(name='published_insertion_count'),
+          by='sample_id',
+          )
+
+combined_insertion_counts = combined_insertion_counts %>%
+  mutate(vif_insertion_count = ifelse(is.na(vif_insertion_count), 0, vif_insertion_count)) %>%
+  mutate(published_insertion_count = ifelse(is.na(published_insertion_count), 0, published_insertion_count))
+
+combined_insertion_counts %>% arrange(desc(vif_insertion_count))
+
+```
+
+```{r}
+
+combined_insertion_counts %>% ggplot(aes(y=vif_insertion_count+1, x=published_insertion_count+1)) + geom_point() +
+  scale_x_continuous(trans='log10') +
+  scale_y_continuous(trans='log10') + geom_abline(slope=1, intercept=0, color='red') +
+  ggtitle("Comparison of # Insertions per Sample") +
+  xlab("NatGen2015") + ylab("ctat-VIF")
+  
+
+```
+
+```{r}
+
+cor.test(combined_insertion_counts$vif_insertion_count, combined_insertion_counts$published_insertion_count)
+
+
+```
+
+```{r}
+
+combined_insertion_counts %>% summarize(sum_vif_insertions = sum(vif_insertion_count), sum_pub_insertions = sum(published_insertion_count))
+
+
+```
+
+
+```{r}
+
+# what if we remove those samples that we find insertions in, but publication says none?
+
+combined_insertion_counts %>% filter(published_insertion_count > 0) %>%
+  summarize(sum_vif_insertions = sum(vif_insertion_count), sum_pub_insertions = sum(published_insertion_count))
+
+
+```
+
+
+
+
+
+
+
+```{r}
+
+sample_ids = combined_insertion_counts %>% filter(published_insertion_count > 0 & vif_insertion_count > 0) %>% pull(sample_id)
 
 length(sample_ids)
 
@@ -112,25 +274,25 @@ df_A_with_nearest_df_B = function(df_A, df_B) {
 
 ```{r}
 
-prelim_with_nearest_published = NULL
+vif_with_nearest_published = NULL
 
-published_with_nearest_prelim = NULL
+published_with_nearest_vif = NULL
 
 for (selected_sample_id in sample_ids) {
   
   published_insertions_for_sample = published_insertions %>% filter(sample_id == selected_sample_id) %>%
     mutate(Chromosome_val = hg38_Chrom, Start_val = hg38_Coord, End_val = hg38_Coord)
   
-  prelim_insertions_for_sample = prelim_insertions %>% filter(sample_id == selected_sample_id) %>% select(-sample_id) %>%
+  vif_insertions_for_sample = vif_insertions %>% filter(sample_id == selected_sample_id) %>% select(-sample_id) %>%
     mutate(Chromosome_val = humanchr, Start_val = human_coord, End_val = human_coord)
   
 
-  prelim_with_nearest_published = bind_rows(prelim_with_nearest_published, 
-                                            df_A_with_nearest_df_B(prelim_insertions_for_sample, published_insertions_for_sample) )
+  vif_with_nearest_published = bind_rows(vif_with_nearest_published, 
+                                            df_A_with_nearest_df_B(vif_insertions_for_sample, published_insertions_for_sample) )
   
   
-  published_with_nearest_prelim = bind_rows(published_with_nearest_prelim,
-                                            df_A_with_nearest_df_B(published_insertions_for_sample, prelim_insertions_for_sample))
+  published_with_nearest_vif = bind_rows(published_with_nearest_vif,
+                                            df_A_with_nearest_df_B(published_insertions_for_sample, vif_insertions_for_sample))
   
 }
 
@@ -141,10 +303,10 @@ for (selected_sample_id in sample_ids) {
 
 ```{r}
 
-prelim_with_nearest_published = prelim_with_nearest_published %>% mutate(delta = abs(hg38_Coord - human_coord))
+vif_with_nearest_published = vif_with_nearest_published %>% mutate(delta = abs(hg38_Coord - human_coord))
 
 
-published_with_nearest_prelim = published_with_nearest_prelim %>% mutate(delta = abs(hg38_Coord - human_coord))
+published_with_nearest_vif = published_with_nearest_vif %>% mutate(delta = abs(hg38_Coord - human_coord))
 
 ```
 
@@ -153,30 +315,30 @@ published_with_nearest_prelim = published_with_nearest_prelim %>% mutate(delta =
 
 AGREE_DIST_RANGE = BINSIZE
 
-prelim_with_nearest_published  = prelim_with_nearest_published  %>% mutate(within_range = delta <= AGREE_DIST_RANGE)
+vif_with_nearest_published  = vif_with_nearest_published  %>% mutate(within_range = delta <= AGREE_DIST_RANGE)
 
-published_with_nearest_prelim  = published_with_nearest_prelim  %>% mutate(within_range = delta <= AGREE_DIST_RANGE)
+published_with_nearest_vif  = published_with_nearest_vif  %>% mutate(within_range = delta <= AGREE_DIST_RANGE)
 
 
 ```
 
 
 ```{r}
-## Examine fraction of prelim insertions that agree
+## Examine fraction of vif insertions that agree
 
 min_read_supports = c(1, 2, 5, 10, 20, 50) 
 
-prelim_with_nearest_published_min_support_df = NULL
+vif_with_nearest_published_min_support_df = NULL
 
 for (min_read_support in min_read_supports) {
   
-  prelim_with_nearest_published_min_reads = prelim_with_nearest_published  %>% filter(total >= min_read_support)
+  vif_with_nearest_published_min_reads = vif_with_nearest_published  %>% filter(total >= min_read_support)
   
-  num_insertions = nrow(prelim_with_nearest_published_min_reads)
-  num_agree = nrow(prelim_with_nearest_published_min_reads %>% filter(within_range))
+  num_insertions = nrow(vif_with_nearest_published_min_reads)
+  num_agree = nrow(vif_with_nearest_published_min_reads %>% filter(within_range))
   frac_agree = num_agree / num_insertions
   
-  prelim_with_nearest_published_min_support_df = bind_rows(prelim_with_nearest_published_min_support_df, 
+  vif_with_nearest_published_min_support_df = bind_rows(vif_with_nearest_published_min_support_df, 
                                                            data.frame(min_read_support=min_read_support, 
                                                                       num_insertions = num_insertions,
                                                                       num_agree = num_agree,
@@ -185,7 +347,7 @@ for (min_read_support in min_read_supports) {
 }
   
 
-prelim_with_nearest_published_min_support_df
+vif_with_nearest_published_min_support_df
 
 ```
 
@@ -193,17 +355,17 @@ prelim_with_nearest_published_min_support_df
 ```{r}
 
 
-published_with_nearest_prelim_min_support_df = NULL
+published_with_nearest_vif_min_support_df = NULL
 
 for (min_read_support in min_read_supports) {
   
-  published_with_nearest_prelim_min_reads = published_with_nearest_prelim  %>% filter(pub_total >= min_read_support)
+  published_with_nearest_vif_min_reads = published_with_nearest_vif  %>% filter(pub_total >= min_read_support)
   
-  num_insertions = nrow(published_with_nearest_prelim_min_reads)
-  num_agree = nrow(published_with_nearest_prelim_min_reads %>% filter(within_range))
+  num_insertions = nrow(published_with_nearest_vif_min_reads)
+  num_agree = nrow(published_with_nearest_vif_min_reads %>% filter(within_range))
   frac_agree = num_agree / num_insertions
   
-  published_with_nearest_prelim_min_support_df = bind_rows(published_with_nearest_prelim_min_support_df, 
+  published_with_nearest_vif_min_support_df = bind_rows(published_with_nearest_vif_min_support_df, 
                                                            data.frame(min_read_support=min_read_support, 
                                                                       num_insertions = num_insertions,
                                                                       num_agree = num_agree,
@@ -212,7 +374,7 @@ for (min_read_support in min_read_supports) {
 }
   
 
-published_with_nearest_prelim_min_support_df
+published_with_nearest_vif_min_support_df
 
 
 ```
@@ -220,7 +382,7 @@ published_with_nearest_prelim_min_support_df
 ```{r}
 
 
-published_with_nearest_prelim %>% select(sample_id, humanchr, hg38_Coord, human_coord, delta, within_range, pub_total) %>%
+published_with_nearest_vif %>% select(sample_id, humanchr, hg38_Coord, human_coord, delta, within_range, pub_total) %>%
   arrange(sample_id, humanchr, delta) %>% filter(pub_total >= 10)
 
 
@@ -230,13 +392,17 @@ published_with_nearest_prelim %>% select(sample_id, humanchr, hg38_Coord, human_
 
 ```{r}
 
+# for those insertion sites that agree, compare the read support found
 
-published_with_nearest_prelim %>% 
+published_with_nearest_vif %>% 
   filter(within_range) %>%
   ggplot(aes(x=pub_total, y=total)) + geom_point() +
   geom_abline(slope=1, intercept=0, color='red') +
-  xlim(0,1000) + ylim(0,1000)
-
+  scale_x_continuous(trans='log10') +
+  scale_y_continuous(trans='log10') + geom_abline(slope=1, intercept=0, color='red') +
+  ggtitle("Read support for agreed-upon insertion sites - HIVID") +
+  xlab("NatGen2015") +
+  ylab("ctat-VIF")
 
 
 ```
@@ -244,7 +410,7 @@ published_with_nearest_prelim %>%
 
 ```{r}
 
-published_with_nearest_prelim %>% 
+published_with_nearest_vif %>% 
   filter(within_range) %>%
   mutate(count_delta = total - pub_total) %>%
   ggplot() + 
@@ -255,7 +421,7 @@ published_with_nearest_prelim %>%
 
 ```{r}
 
-totals = published_with_nearest_prelim %>% 
+totals = published_with_nearest_vif %>% 
   filter(within_range) %>%
   select(total, pub_total)
 
